--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -108,6 +108,10 @@
           <groupId>org.apache.zookeeper</groupId>
           <artifactId>zookeeper</artifactId>
         </exclusion>
+        <exclusion>
+           <groupId>asm</groupId>
+           <artifactId>asm</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
 
