--- a/client-http/pom.xml
+++ b/client-http/pom.xml
@@ -20,12 +20,12 @@
   <parent>
     <groupId>org.apache.livy</groupId>
     <artifactId>livy-main</artifactId>
-    <version>0.7.1-incubating-SNAPSHOT</version>
+    <version>0.7.1-incubating</version>
   </parent>
 
   <groupId>org.apache.livy</groupId>
   <artifactId>livy-client-http</artifactId>
-  <version>0.7.1-incubating-SNAPSHOT</version>
+  <version>0.7.1-incubating</version>
   <packaging>jar</packaging>
 
   <dependencies>
