--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -23,11 +23,11 @@
     <groupId>org.apache.livy</groupId>
     <artifactId>livy-main</artifactId>
     <relativePath>../pom.xml</relativePath>
-    <version>0.7.1-incubating-SNAPSHOT</version>
+    <version>0.7.1-incubating</version>
   </parent>
 
   <artifactId>livy-integration-test</artifactId>
-  <version>0.7.1-incubating-SNAPSHOT</version>
+  <version>0.7.1-incubating</version>
   <packaging>jar</packaging>
 
   <properties>
