--- a/thriftserver/session/pom.xml
+++ b/thriftserver/session/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.apache.livy</groupId>
     <artifactId>livy-main</artifactId>
-    <version>0.7.1-incubating-SNAPSHOT</version>
+    <version>0.7.1-incubating</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
