--- a/pom.xml
+++ b/pom.xml
@@ -92,8 +92,8 @@
     <httpcore.version>4.4.4</httpcore.version>
     <jackson.version>2.12.7</jackson.version>
     <jackson-databind.version>2.12.7.1</jackson-databind.version>
-    <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
-    <jetty.version>9.4.50.v20221201</jetty.version>
+    <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
+    <jetty.version>10.0.1</jetty.version>
     <junit.version>4.13.1</junit.version>
     <libthrift.version>0.9.3</libthrift.version>
     <kryo.version>4.0.2</kryo.version>
