--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -49,7 +49,14 @@ jobs:
           ${{ runner.os }}-maven-
     -
       name: Set Python 3 as default
-      run: pyenv global 3 && echo "PYSPARK_PYTHON=$(which python3)" >> "$GITHUB_ENV"
+      run: |
+        pyenv global 3
+        echo "=== Python Environment ==="
+        python3 --version
+        which python3
+        python3 -c "import cloudpickle; print(f'cloudpickle: {cloudpickle.__version__}')"
+        echo "PYSPARK_PYTHON=$(which python3)" >> "$GITHUB_ENV"
+        echo "PYSPARK_DRIVER_PYTHON=$(which python3)" >> "$GITHUB_ENV"
     -
       name: Set JDK version
       run: update-alternatives --set java ${{ matrix.jdk_path }}
